Refactor index.html to use SVG for envelope

--- a/index.html
+++ b/index.html
@@ -27,346 +27,107 @@
     }
 
     .card{
-      background:var(--card);
-      padding:28px 24px;
-      border-radius:20px;
-      width:min(650px,92%);
-      text-align:center;
-      box-shadow:var(--shadow);
-      position:relative;
-    }
+  background:var(--card);
+  padding:28px 24px;
+  border-radius:20px;
+  width:min(650px,92%);
+  text-align:center;
+  box-shadow:var(--shadow);
+  position:relative;
+}
 
-    /* ---------- ENVELOPE INTRO ---------- */
-    .envelope-wrap{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      gap:14px;
-      min-height:320px;
-    }
+/* ---------- ENVELOPE INTRO (SVG VERSION) ---------- */
+.envelope-wrap{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  gap:14px;
+  min-height:320px;
+}
 
-    .envelope{
-      width:220px;
-      height:150px;
-      position:relative;
-      cursor:pointer;
-      transform: translateY(0);
-      transition: transform .18s ease;
-      user-select:none;
-    }
-    .envelope:hover{ transform: translateY(-3px); }
+.env-btn{
+  border:none;
+  background:transparent;
+  padding:0;
+  cursor:pointer;
+}
 
-    /* Envelope body */
-    .env-body{
-      position:absolute;
-      inset:0;
-      background:#fff;
-      border-radius:14px;
-      box-shadow:0 20px 50px rgba(0,0,0,.14);
-      overflow:hidden;
-    }
+.env-svg{
+  width:min(360px, 88vw);
+  height:auto;
+  filter: drop-shadow(0 22px 40px rgba(0,0,0,.18));
+  transition: transform .18s ease;
+  perspective: 900px;              /* ✅ important */
+}
 
-    /* Bottom fold */
-    .env-bottom{
-      position:absolute;
-      left:0; right:0; bottom:0;
-      height:0;
-      border-left:110px solid transparent;
-      border-right:110px solid transparent;
-      border-top:78px solid #ffe4ef;
-      filter:saturate(1.05);
-    }
+.env-btn:hover .env-svg{
+  transform: translateY(-3px);
+}
 
-    /* Left/right folds */
-    .env-left{
-      position:absolute;
-      left:0; top:0; bottom:0;
-      width:0; height:0;
-      border-top:75px solid transparent;
-      border-bottom:75px solid transparent;
-      border-right:110px solid #ffd6e8;
-      opacity:.95;
-    }
-    .env-right{
-      position:absolute;
-      right:0; top:0; bottom:0;
-      width:0; height:0;
-      border-top:75px solid transparent;
-      border-bottom:75px solid transparent;
-      border-left:110px solid #ffd6e8;
-      opacity:.95;
-    }
+.env-svg .flap{
+  transform-origin: 160px 70px;
+  transform: rotateX(0deg);
+  transition: transform .55s ease;
+  transform-style: preserve-3d;     /* ✅ important */
+}
 
-    /* Top flap */
-    .env-flap{
-      position:absolute;
-      left:0; top:0;
-      width:0; height:0;
-      border-left:110px solid transparent;
-      border-right:110px solid transparent;
-      border-bottom:85px solid #ffb3cf;
-      transform-origin: top center;
-      transform: rotateX(0deg);
-      transition: transform .45s ease;
-      z-index:5;
-    }
+.env-svg .letter{
+  transform: translateY(0);
+  transition: transform .55s ease;
+}
 
-    /* Small heart on flap (like your drawing) */
-    .env-heart{
-      position:absolute;
-      left:50%;
-      top:18px;
-      transform:translateX(-50%);
-      width:16px;
-      height:16px;
-      z-index:6;
-    }
-    .env-heart:before,
-    .env-heart:after{
-      content:"";
-      position:absolute;
-      width:10px;
-      height:16px;
-      background: var(--pink);
-      border-radius:10px 10px 0 0;
-      top:0;
-    }
-    .env-heart:before{
-      left:6px;
-      transform: rotate(-45deg);
-      transform-origin: 0 100%;
-    }
-    .env-heart:after{
-      left:0px;
-      transform: rotate(45deg);
-      transform-origin: 100% 100%;
-    }
+.env-btn.open .env-svg .flap{
+  transform: rotateX(180deg);
+}
 
-    /* Letter that slides up */
-    .letter{
-      position:absolute;
-      left:14px;
-      right:14px;
-      bottom:12px;
-      height:92px;
-      background:#ffffff;
-      border-radius:12px;
-      border:2px solid rgba(255,59,130,.14);
-      box-shadow:0 12px 26px rgba(0,0,0,.10);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:34px;
-      transform: translateY(0);
-      transition: transform .55s ease;
-      z-index:3;
-    }
+.env-btn.open .env-svg .letter{
+  transform: translateY(-22px);
+}
 
-    .open-text{
-      font-size:14px;
-      opacity:.75;
-    }
+.open-text{
+  font-size:14px;
+  opacity:.75;
+}
 
-    .envelope.open .env-flap{
-      transform: rotateX(180deg);
-    }
-    .envelope.open .letter{
-      transform: translateY(-58px);
-    }
+<!-- ENVELOPE SCREEN (FIRST) -->
+<div id="envelopeScreen" class="view">
+  <div class="envelope-wrap">
+    <button class="env-btn" id="envelopeBtn" aria-label="Open envelope">
+      <svg class="env-svg" viewBox="0 0 320 220" aria-hidden="true">
+        <!-- card -->
+        <rect x="20" y="40" width="280" height="160" rx="20" fill="#ffffff"/>
+        <rect x="20" y="40" width="280" height="160" rx="20"
+              fill="none" stroke="rgba(255,59,130,.25)" stroke-width="4"/>
 
-    /* ---------- MAIN CONTENT ---------- */
+        <!-- bottom fold -->
+        <path d="M40 170 L160 105 L280 170 L280 190 L40 190 Z" fill="#ffe4ef"/>
 
-    /* Corgi circle */
-    .avatar{
-      width:140px;
-      height:140px;
-      border-radius:50%;
-      overflow:hidden;
-      margin:0 auto 14px;
-      border:6px solid rgba(255,59,130,.18);
-      box-shadow:0 14px 40px rgba(0,0,0,.12);
-      background:#fff;
-    }
-    .avatar img{
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      display:block;
-    }
+        <!-- letter -->
+        <g class="letter">
+          <rect x="95" y="70" width="130" height="90" rx="14"
+                fill="#ffffff" stroke="rgba(255,59,130,.18)" stroke-width="4"/>
+          <text x="160" y="128" text-anchor="middle" font-size="42">💌</text>
+        </g>
 
-    h1{
-      font-size:32px;
-      margin:6px 0 6px;
-    }
+        <!-- flap -->
+        <g class="flap">
+          <path d="M40 90 L160 20 L280 90 L160 140 Z" fill="#ffb3cf"/>
+          <!-- heart on flap -->
+          <path d="M160 52
+                   C160 45 170 45 170 54
+                   C170 64 160 70 160 70
+                   C160 70 150 64 150 54
+                   C150 45 160 45 160 52 Z"
+                fill="#ff3b82"/>
+        </g>
+      </svg>
+    </button>
 
-    .sub{
-      font-size:16px;
-      opacity:.72;
-      margin-bottom:18px;
-    }
+    <div class="open-text">tap to open 💗</div>
+  </div>
+</div>
 
-    /* Buttons area */
-    .buttons{
-      position:relative;
-      height:120px; /* space for runaway */
-      display:flex;
-      justify-content:center;
-      align-items:center;
-    }
-
-    .btn-row{
-      display:flex;              /* horizontal */
-      gap:14px;
-      align-items:center;
-      justify-content:center;
-      position:relative;
-      z-index:2;
-    }
-
-    button{
-      border:none;
-      padding:13px 24px;
-      font-size:18px;
-      border-radius:999px;
-      cursor:pointer;
-      user-select:none;
-      transition: transform .1s ease, filter .12s ease;
-    }
-    button:active{ transform: scale(.98); }
-
-    .yes{
-      background:linear-gradient(135deg, var(--pink), #ff6aa2);
-      color:white;
-      box-shadow:0 10px 24px rgba(255,59,130,.25);
-    }
-
-    .no{
-      background:#eee;
-      position:absolute;
-      left:50%;
-      top:50%;
-      transform:translate(-50%,-50%);
-      z-index:1;
-    }
-
-    .hint{
-      font-size:14px;
-      margin-top:10px;
-      min-height:20px;
-      opacity:.85;
-    }
-
-    .hidden{display:none}
-
-    /* Views */
-    .view{
-      position:relative;
-      min-height:320px;
-    }
-
-    .yay h1{
-      margin-top:6px;
-      margin-bottom:10px;
-      font-size:36px;
-    }
-
-    .gif{
-      width:100%;
-      max-width:380px;
-      border-radius:18px;
-      box-shadow:0 14px 40px rgba(0,0,0,.12);
-      display:block;
-      margin:8px auto 0;
-    }
-
-    .love-notes{
-      margin-top:14px;
-      font-style:italic;
-      font-size:18px;
-      opacity:.9;
-      line-height:1.4;
-      font-family: Georgia, "Times New Roman", serif;
-    }
-
-    /* Floating "what if" button OUTSIDE card */
-    .side-btn{
-      position:fixed;
-      right:22px;
-      bottom:22px;
-      padding:12px 18px;
-      font-size:14px;
-      border-radius:999px;
-      background:linear-gradient(135deg, #ff3b82, #ff6aa2);
-      color:white;
-      border:none;
-      cursor:pointer;
-      box-shadow:0 14px 30px rgba(255,59,130,.35);
-      z-index:2000;
-      display:none; /* we show it ONLY on the yay page via JS */
-    }
-    .side-btn:hover{ filter:brightness(1.05); }
-
-    /* Confetti (falling) */
-    .confetti{
-      position:fixed;
-      top:-10px;
-      width:10px;
-      height:14px;
-      opacity:.9;
-      border-radius:2px;
-      animation: fall linear forwards;
-      pointer-events:none;
-      z-index:999;
-    }
-    @keyframes fall{
-      to { transform: translateY(110vh) rotate(720deg); opacity:1; }
-    }
-
-    /* Firework burst */
-    .burst{
-      position:fixed;
-      left:0; top:0;
-      width:8px; height:8px;
-      border-radius:50%;
-      pointer-events:none;
-      z-index:1000;
-    }
-    .spark{
-      position:absolute;
-      left:50%; top:50%;
-      width:6px; height:6px;
-      border-radius:50%;
-      transform: translate(-50%, -50%);
-      animation: spark 900ms ease-out forwards;
-    }
-    @keyframes spark{
-      0%   { transform: translate(-50%, -50%) scale(1); opacity:1; }
-      100% { transform: translate(var(--dx), var(--dy)) scale(.6); opacity:0; }
-    }
-  </style>
-</head>
-
-<body>
-  <div class="card">
-
-    <!-- ENVELOPE SCREEN (FIRST) -->
-    <div id="envelopeScreen" class="view">
-      <div class="envelope-wrap">
-        <div class="envelope" id="envelopeBtn" aria-label="Open envelope">
-          <div class="env-body"></div>
-          <div class="env-left"></div>
-          <div class="env-right"></div>
-          <div class="env-bottom"></div>
-
-          <div class="env-flap"></div>
-          <div class="env-heart" aria-hidden="true"></div>
-
-          <div class="letter">💌</div>
-        </div>
-        <div class="open-text">tap to open 💗</div>
-      </div>
-    </div>
 
     <!-- MAIN SCREEN -->
     <div id="main" class="hidden view">
@@ -536,3 +297,4 @@
   </script>
 </body>
 </html>
+
